Fixed CSS for dark mode, updated validator.
Went back to a barebones email validator, the other one didn't work with a cmail.carleton.ca domain - which i figured was important.

--- a/src/components/mailingListForm.css
+++ b/src/components/mailingListForm.css
@@ -1,4 +1,3 @@
-
 #mailingListText {
   color: var(--textColour); 
   font-family: Inconsolata; 
@@ -60,7 +59,7 @@
   }
 
   .submitButton:disabled {
-    background-color: white; 
+    background-color: var(--spaceColour); 
     transition-duration: 0.3s; 
     opacity: 0.5; 
   }
